# minimal_dbus_qt_example

./: CMakeLists.txt  environment.yml  main.cpp  myproject_dbus.cpp  myproject_dbus.h
